--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   color: #333;
 }
 header {
-  background-color: #6200ea;
+  background-image: linear-gradient(orange , blue);
   color: white;
   padding: 40px;
   text-align: center;
