--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   color: #333;
 }
 header {
-  background-image: linear-gradient(orange , blue);
+  background-image: linear-gradient(#1D3557 , #FF8C00);
   color: white;
   padding: 40px;
   text-align: center;
